changed title in roadmarking notebook

--- a/RoadMarkingHelsinki/RoadMarkingMonitoring.ipynb
+++ b/RoadMarkingHelsinki/RoadMarkingMonitoring.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <center>Road Marking Monitoring for Smart Cities<center>\n",
-    "<center>\n",
-    "Alexander Jung$^{1,2}$, Jyoti Prasad Bartaula$^{1}$, Sangam Deuja$^{1}$<br><br>\n",
+    "## Road Marking Monitoring for Smart Cities\n",
+    "    \n",
+    "### Alexander Jung$^{1,2}$, Jyoti Prasad Bartaula$^{1}$, Sangam Deuja$^{1}$\n",
     "$^{1}$Integrify ry, Helsinki, Finland\n",
     "<br><br>\n",
     "$^{2}$Department of Computer Science, Aalto University, Finland \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
